mdapi/Custom/objects/Concierge__c.object
<CustomObject>
    <description>This object will assist with the management of support related concepts across the Enterprise. It should be thought of in the traditional sense of a &quot;Case&quot;.</description>
    <fields>
        <fullName>Approval_Required__c</fullName>
        <formula>IF(  ( RecordType.Name = &apos;SF Request&apos;   || RecordType.Name = &apos;Brokersite Request&apos;) &amp;&amp;  ( ISPICKVAL( Request_Area__c , &apos;System Enhancement or Change Request&apos;) ) , True, False)
 || 
 IF( ISPICKVAL( Request_Area__c , &apos;Support Issue&apos;) &amp;&amp;  ISPICKVAL( Request_Type__c , &apos;Other&apos;) &amp;&amp;  ISPICKVAL( Request_Specifics__c , &apos;Delete Record&apos;)    , True, False)</formula>
        <label>Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <inlineHelpText>We are no longer using escalation approval functionality.  Instead, please use a combination of the Priority and Impact fields to describe the urgency of your request.</inlineHelpText>
        <label>Escalation Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted</fullName>
                    <default>true</default>
                    <label>Not Submitted</label>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Escalation Request Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Days_Open__c</fullName>
        <label>Business Days Open</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Justification__c</fullName>
        <inlineHelpText>This field should be completed by Business Owners who approve &quot;System Enhancement or Change Request&quot; tickets.</inlineHelpText>
        <label>Business Justification</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <inlineHelpText>This field auto-populates with the current date and time when Status is changed to Closed and the record is saved.  The field is nonetheless editable.</inlineHelpText>
        <label>Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <inlineHelpText>This field auto-populates with the current date and time when Status is changed to Completed and the record is saved.  The field is nonetheless editable.</inlineHelpText>
        <label>Completed by Tech Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Completed_by_Regional_Tech__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed by Regional Tech</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_Date_Historical__c</fullName>
        <inlineHelpText>This is the date the request was created as an SF Support/Change Request.</inlineHelpText>
        <label>Created Date (Historical)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Datamatics_Recipient__c</fullName>
        <label>Datamatics Recipient</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Date_Submitted__c</fullName>
        <inlineHelpText>This field is used only to track the Created Date for legacy Yardi System Enhancements.</inlineHelpText>
        <label>Date Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Time_Assigned_to_Tech__c</fullName>
        <label>Date/Time Assigned to Tech</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Day__c</fullName>
        <formula>CASE(
	MOD( DATEVALUE(CreatedDate)- DATE(1900, 1, 7), 7), 
	6,0, 
	0,0,
	1
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Defect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Defect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Please provide as much detail as possible regarding your request. You may attach screen shots as necessary to assist.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Director_of_Acquisitions_Queue_Member__c</fullName>
        <description>This field is used in Concierge list views used for Director of Acquisitions tickets.</description>
        <formula>IF( $Profile.Name   = &apos;System Administrator&apos;, True,
IF( $Profile.Name   = &apos;SFDC Business Partner&apos;, True,
IF( $UserRole.Name  = &apos;Executive-Corporate&apos;, True, 
IF( (   $User.Full_Name__c = &apos;David Sampson&apos; )  &amp;&amp;
 (OR( ISPICKVAL( Region__c , &apos;Phoenix&apos;) , ISPICKVAL(Region__c , &apos;Las Vegas&apos;)))  , True, 
IF( TEXT( $User.Region__c ) =  TEXT( Region__c )   &amp;&amp;    $Profile.Name = &apos;IH - Director of Acquisitions&apos; , True, False))) ))</formula>
        <inlineHelpText>This field is used in Concierge list views used for Director of Acquisitions tickets.</inlineHelpText>
        <label>Director of Acquisitions Queue Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>This field is used on the Treasury Request only.</description>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Midwest</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <description>This field is used on the Treasury Request only.</description>
        <label>Entity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IH1</fullName>
                </value>
                <value>
                    <fullName>IH2</fullName>
                </value>
                <value>
                    <fullName>IH3</fullName>
                </value>
                <value>
                    <fullName>IH4</fullName>
                </value>
                <value>
                    <fullName>IH5</fullName>
                </value>
                <value>
                    <fullName>IH6</fullName>
                </value>
                <value>
                    <fullName>S1</fullName>
                </value>
                <value>
                    <fullName>S2</fullName>
                </value>
                <value>
                    <fullName>S3</fullName>
                </value>
                <value>
                    <fullName>S4</fullName>
                </value>
                <value>
                    <fullName>S5</fullName>
                </value>
                <value>
                    <fullName>S6</fullName>
                </value>
                <value>
                    <fullName>S7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Escalate_Reason__c</fullName>
        <label>Escalate Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Favorite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Favorite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Follow_Up__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For Melanie&apos;s use in processing tickets.</description>
        <label>Follow Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hotfix__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hotfix</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hours_Worked__c</fullName>
        <label>Hours Worked</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IRN_number__c</fullName>
        <inlineHelpText>IRN number OR Invoice number and Vendor ID is required for issues related to invoice processing. If multiple IRNs were affected, please list all IRN numbers in the Detailed Description field below</inlineHelpText>
        <label>IRN number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this field after the ticket is approved by the IT Dept., which is the final level of approval.  Refer to Approval History for business owner approval, when applicable.</inlineHelpText>
        <label>IT Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IT_Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IT Rejected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <label>Impact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single User</fullName>
                </value>
                <value>
                    <fullName>Multiple Users</fullName>
                </value>
                <value>
                    <fullName>Entire Office</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Imported_to_QC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Imported to QC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <inlineHelpText>IRN number OR Invoice number and Vendor ID is required for issues related to invoice processing. If multiple IRNs were affected, please list all IRN numbers in the Detailed Description field below</inlineHelpText>
        <label>Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_VIP__c</fullName>
        <description>This field is being used to identify if the ticket is requested by VIP user</description>
        <formula>Requestor_Name__r.Is_VIP__c</formula>
        <label>Is VIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Viewed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be checked if user has viewed a concierge records otherwise it will be unchecked</description>
        <label>Is Viewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date_SF_Admin__c</fullName>
        <inlineHelpText>This field is used by the SF Admin to keep track of the last time a Chatter message was sent to the user.</inlineHelpText>
        <label>Last Modified Date (SF Admin)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Life_Cycle_of_Ticket__c</fullName>
        <formula>IF( DATEVALUE(Closed_Date__c) - DATEVALUE(CreatedDate) &lt;= 1, ((Closed_Date__c - CreatedDate)*1440), 

(CASE(MOD( DATEVALUE( CreatedDate ) - DATE(1985,6,24),7), 

0 , CASE( MOD( DATEVALUE(Closed_Date__c)- DATEVALUE(CreatedDate),7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( DATEVALUE(Closed_Date__c)- DATEVALUE(CreatedDate),7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( DATEVALUE(Closed_Date__c)- DATEVALUE(CreatedDate),7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( DATEVALUE(Closed_Date__c)- DATEVALUE(CreatedDate),7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( DATEVALUE(Closed_Date__c)- DATEVALUE(CreatedDate),7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( DATEVALUE(Closed_Date__c)- DATEVALUE(CreatedDate),7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( DATEVALUE(Closed_Date__c)- DATEVALUE(CreatedDate),7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( DATEVALUE(Closed_Date__c) - DATEVALUE(CreatedDate))/7)*5))*1440)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Life Cycle of Ticket (Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manager_Name__c</fullName>
        <formula>Requestor_Name__r.Manager.Full_Name__c</formula>
        <label>Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <description>This field is used on the Treasury Request only.</description>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Division__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>Charlotte</fullName>
                </value>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>Inland Empire</fullName>
                </value>
                <value>
                    <fullName>Jacksonville</fullName>
                </value>
                <value>
                    <fullName>Las Vegas</fullName>
                </value>
                <value>
                    <fullName>Los Angeles</fullName>
                </value>
                <value>
                    <fullName>Miami</fullName>
                </value>
                <value>
                    <fullName>Minneapolis</fullName>
                </value>
                <value>
                    <fullName>Orlando</fullName>
                </value>
                <value>
                    <fullName>Phoenix</fullName>
                </value>
                <value>
                    <fullName>Sacramento</fullName>
                </value>
                <value>
                    <fullName>Seattle</fullName>
                </value>
                <value>
                    <fullName>Tampa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>My_Region_s_Regional_Queue_Member__c</fullName>
        <description>This field is used in the RFC Support Request process, specifically on the User record and in List Views.   This field is needed for them to see tickets only for their own region.  Refer to FAQ-00269 for more information.</description>
        <formula>IF(  $Profile.Name   = &apos;System Administrator&apos;, True,
IF( $UserRole.Name  = &apos;Executive-Corporate&apos;, True, 
IF( (   $User.Full_Name__c = &apos;Lorrie Sobzak&apos;  ||  $User.Full_Name__c = &apos;Ali Estremadoyro&apos; )  &amp;&amp;
 (OR( ISPICKVAL( Region__c , &apos;Orlando&apos;) , ISPICKVAL(Region__c , &apos;Tampa&apos;) ))  , True, 
IF( (   $User.Full_Name__c = &apos;Eric Bryant&apos; )  &amp;&amp;
 (OR( ISPICKVAL( Region__c , &apos;Chicago&apos;) , ISPICKVAL(Region__c , &apos;Charlotte&apos;),ISPICKVAL(Region__c , &apos;Minneapolis&apos; )))  , True, 
IF( TEXT( $User.Region__c ) =  TEXT( Region__c )   &amp;&amp;  $User.Is_Regional_Queue_Member__c  = True  , True, False)))))</formula>
        <label>My Region&apos;s Regional Queue Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>My_Team_Member_Request__c</fullName>
        <formula>IF($User.Full_Name__c= Manager_Name__c, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <label>My Team Member Request</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Need_to_Escalate__c</fullName>
        <label>Need to Escalate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Needs_Update_to_Yardi_Support__c</fullName>
        <formula>AND( RecordType.Name = &apos;Yardi Request&apos;, NOT( ISPICKVAL(Status__c, &apos;Closed&apos; )), NOT(ISPICKVAL(Request_Area__c, &apos;System Enhancement or Change Request&apos;)),  CreatedById = OwnerId)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Needs Update to Yardi Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Ticket__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is only usable by these profiles:  System Administrator, IH - IT Concierge Support, IH - IT External Support, SFDC Business Partner, IH - Director of Acquisitions, IH - Director of Acquisitions(App Track 2.0).</description>
        <label>Parent Ticket</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>You do not have access to add a parent Record.</errorMessage>
            <filterItems>
                <field>$User.ProfileId</field>
                <operation>equals</operation>
                <value>00eE0000000o2J8,00eE0000000NYLQ,00eE0000000NYDv,00eE0000000NYMi</value>
            </filterItems>
            <filterItems>
                <field>$User.ProfileId</field>
                <operation>equals</operation>
                <value>00eE0000000NsHd,00e0L000000G2Yw,00eE0000000N8TT,00e0L000000G2SF</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Concierge__c</referenceTo>
        <relationshipLabel>Child Tickets</relationshipLabel>
        <relationshipName>Concierges_Child</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Performance_Issue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Performance Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                    <default>true</default>
                    <label>Low</label>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recurring_Issue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recurring Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Market2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>Charlotte</fullName>
                </value>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>Dallas</fullName>
                </value>
                <value>
                    <fullName>Inland Empire</fullName>
                </value>
                <value>
                    <fullName>Jacksonville</fullName>
                </value>
                <value>
                    <fullName>Las Vegas</fullName>
                </value>
                <value>
                    <fullName>Los Angeles</fullName>
                </value>
                <value>
                    <fullName>Miami</fullName>
                </value>
                <value>
                    <fullName>Minneapolis</fullName>
                </value>
                <value>
                    <fullName>Orlando</fullName>
                </value>
                <value>
                    <fullName>Phoenix</fullName>
                </value>
                <value>
                    <fullName>Sacramento</fullName>
                </value>
                <value>
                    <fullName>Seattle</fullName>
                </value>
                <value>
                    <fullName>Tampa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_SIR_Status__c</fullName>
        <formula>Related_SIR__r.Status_Composite__c</formula>
        <label>Related SIR Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_SIR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the mechanism the Salesforce team uses to communicate and prioritize requests involving development of the system.</description>
        <label>Related SIR</label>
        <referenceTo>Issues_New_Feature_Request__c</referenceTo>
        <relationshipLabel>Concierge</relationshipLabel>
        <relationshipName>Concierge</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rent_Issue__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If the ticket is due to rent issues between Yardi and SF</inlineHelpText>
        <label>Rent Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Report_Message_Field__c</fullName>
        <defaultValue>&quot;If you are requesting a report, please make sure you have provided the following details in the description&quot;&amp;  BR() &amp;
&quot;1. Name of Report&quot; &amp; BR() &amp;
&quot;2. Report Specification&quot; &amp; BR() &amp;
&quot;3. Mock Up (As attachment)&quot;&amp;  BR() &amp;
&quot;4. Business Justification&quot;</defaultValue>
        <label>Report Message Field</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Report__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field is used by Yardi Support to identify records to be included in a mass data load.</inlineHelpText>
        <label>Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Area__c</fullName>
        <label>Request Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Brokersite</fullName>
                </value>
                <value>
                    <fullName>Computer / iPad / iPhone</fullName>
                </value>
                <value>
                    <fullName>Network / File Server / Network Printer</fullName>
                </value>
                <value>
                    <fullName>Office Phone</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Support Issue</fullName>
                </value>
                <value>
                    <fullName>System Enhancement or Change Request</fullName>
                </value>
                <value>
                    <fullName>Turn Cost Budget Tool</fullName>
                </value>
                <value>
                    <fullName>User Access</fullName>
                </value>
                <value>
                    <fullName>ePM ( Invoice processing )</fullName>
                </value>
                <value>
                    <fullName>ePM -Technical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Specifics__c</fullName>
        <label>Request Specifics</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Request_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AcctTree Edit/Add</fullName>
                </value>
                <value>
                    <fullName>ACH Related</fullName>
                </value>
                <value>
                    <fullName>Acquisition Status</fullName>
                </value>
                <value>
                    <fullName>Active Directory</fullName>
                </value>
                <value>
                    <fullName>Adding New User</fullName>
                </value>
                <value>
                    <fullName>Additional Access/Permissions</fullName>
                </value>
                <value>
                    <fullName>Address Related</fullName>
                </value>
                <value>
                    <fullName>Adobe Acrobat</fullName>
                </value>
                <value>
                    <fullName>Adobe Standard</fullName>
                </value>
                <value>
                    <fullName>ADP</fullName>
                </value>
                <value>
                    <fullName>AM Model</fullName>
                </value>
                <value>
                    <fullName>AP Batch Locked</fullName>
                </value>
                <value>
                    <fullName>Application/Move-In Charges</fullName>
                </value>
                <value>
                    <fullName>Application Related</fullName>
                </value>
                <value>
                    <fullName>AppTrack / Showing / IH Lead</fullName>
                </value>
                <value>
                    <fullName>Architecture Change</fullName>
                </value>
                <value>
                    <fullName>AR Related Issue</fullName>
                </value>
                <value>
                    <fullName>Automation of Tasks</fullName>
                </value>
                <value>
                    <fullName>Box</fullName>
                </value>
                <value>
                    <fullName>Brokersite</fullName>
                </value>
                <value>
                    <fullName>Call Center</fullName>
                </value>
                <value>
                    <fullName>Cancel Application</fullName>
                </value>
                <value>
                    <fullName>Changes In Role</fullName>
                </value>
                <value>
                    <fullName>Charges and Payments</fullName>
                </value>
                <value>
                    <fullName>Check Payment Batch Reset</fullName>
                </value>
                <value>
                    <fullName>Check Scanner</fullName>
                </value>
                <value>
                    <fullName>Concur</fullName>
                </value>
                <value>
                    <fullName>Credit Card Related</fullName>
                </value>
                <value>
                    <fullName>Credit Card Related Issue</fullName>
                </value>
                <value>
                    <fullName>Credit Check Button Missing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <inlineHelpText>Enter the request type that most closely describes the issue you are having related to your selection above of Invoice Processing or a Technical issue</inlineHelpText>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Request_Area__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Access Request</fullName>
                </value>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Acquisitions / Asset Mgmt.</fullName>
                </value>
                <value>
                    <fullName>Airwatch Install</fullName>
                </value>
                <value>
                    <fullName>Application Access</fullName>
                </value>
                <value>
                    <fullName>Architecture</fullName>
                </value>
                <value>
                    <fullName>BI Enhancements</fullName>
                </value>
                <value>
                    <fullName>Capital Markets</fullName>
                </value>
                <value>
                    <fullName>Cash Management Related</fullName>
                </value>
                <value>
                    <fullName>Cash Mgmt. &amp; Pmt. Process</fullName>
                </value>
                <value>
                    <fullName>Database Changes</fullName>
                </value>
                <value>
                    <fullName>Data Changes</fullName>
                </value>
                <value>
                    <fullName>File Server</fullName>
                </value>
                <value>
                    <fullName>Fix / Replace</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>HOA</fullName>
                </value>
                <value>
                    <fullName>IH.com</fullName>
                </value>
                <value>
                    <fullName>Install / Remove / Repair</fullName>
                </value>
                <value>
                    <fullName>Intranet</fullName>
                </value>
                <value>
                    <fullName>Intranet New Content</fullName>
                </value>
                <value>
                    <fullName>Leasing</fullName>
                </value>
                <value>
                    <fullName>Leasing Process</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>Multiple Phones</fullName>
                </value>
                <value>
                    <fullName>National Lease</fullName>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
                <value>
                    <fullName>New Hire/Contractor</fullName>
                </value>
                <value>
                    <fullName>Password Reset</fullName>
                </value>
                <value>
                    <fullName>Payables Related</fullName>
                </value>
                <value>
                    <fullName>Peripheral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requester_Email__c</fullName>
        <label>Requestor Email (Web Form)</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Requester_Name__c</fullName>
        <defaultValue>$User.FirstName &amp; &quot; &quot; &amp; $User.LastName</defaultValue>
        <label>Ticket Submitted by</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Phone__c</fullName>
        <label>Requestor Phone (Web Form)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Requestor_Email__c</fullName>
        <formula>Requestor_Name__r.Email</formula>
        <label>Requestor Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor_Name_Text__c</fullName>
        <label>Requestor Name (Web Form)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requestor Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Concierges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requestor_Phone__c</fullName>
        <formula>IF(
NOT(ISBLANK(Requestor_Name__r.Phone)), 
Requestor_Name__r.Phone,
IF(
NOT(ISBLANK(Requestor_Name__r.MobilePhone)), 
Requestor_Name__r.MobilePhone,
IF
(NOT(ISBLANK(Requestor_Name__r.Other_Phone__c)),
Requestor_Name__r.Other_Phone__c,
null)))</formula>
        <label>Requestor Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution_Details__c</fullName>
        <label>Resolution Details</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SF_Request_Historical__c</fullName>
        <inlineHelpText>This field is used to store the SF Support/Change Request record number upon the conversion of SF Support Request records to Concierge.</inlineHelpText>
        <label>SF Request (Historical)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA_Hours__c</fullName>
        <label>SLA Hours</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>